; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_tecmp0.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_tecmp0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_entry = type { %struct.TYPE_3__*, %struct.TYPE_4__* }
%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @tecmp0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tecmp0(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.tree_entry*, align 8
  %6 = alloca %struct.tree_entry*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.tree_entry**
  %9 = load %struct.tree_entry*, %struct.tree_entry** %8, align 8
  store %struct.tree_entry* %9, %struct.tree_entry** %5, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.tree_entry**
  %12 = load %struct.tree_entry*, %struct.tree_entry** %11, align 8
  store %struct.tree_entry* %12, %struct.tree_entry** %6, align 8
  %13 = load %struct.tree_entry*, %struct.tree_entry** %5, align 8
  %14 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %13, i32 0, i32 1
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.tree_entry*, %struct.tree_entry** %5, align 8
  %19 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %18, i32 0, i32 1
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.tree_entry*, %struct.tree_entry** %5, align 8
  %24 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %23, i32 0, i32 0
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i64 0
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.tree_entry*, %struct.tree_entry** %6, align 8
  %30 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %29, i32 0, i32 1
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.tree_entry*, %struct.tree_entry** %6, align 8
  %35 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %34, i32 0, i32 1
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.tree_entry*, %struct.tree_entry** %6, align 8
  %40 = getelementptr inbounds %struct.tree_entry, %struct.tree_entry* %39, i32 0, i32 0
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i64 0
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @base_name_compare(i32 %17, i32 %22, i32 %28, i32 %33, i32 %38, i32 %44)
  ret i32 %45
}

declare dso_local i32 @base_name_compare(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
